# delivery_service

./: .gitignore  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_07_09_2107-909e7965eb26_parcel_model.py
src/api/v1/: endpoints.py
src/api/v1/dependencies/: rabbitmq.py  redis.py  repository.py
src/api/v1/routes/: parcel.py
src/core/: base_model.py  config.py  db.py  logging.py
src/models/: __init__.py  db.py  parcel.py
src/repository/: base.py  parcel.py
src/schemas/: base.py  parcel.py
src/services/: redis.py
src/utils/: common.py  parcel.py  session.py
src/workers/: parcel_worker.py
